--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
   <video id="localVideo" autoplay muted></video>
   <video id="remoteVideo" autoplay></video>
   <script src="script.js"></script>
+  <a href="https://agaudana.github.io/Chat/" target="_blank">Open Chat</a>
 </body>
 </html>
