--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="phone-651704__340.ico" type="image/x-icon"/>
+  <link rel="icon" type="image/png" href="/phone-651704__340.png/"/>
   <title>VidChat</title>
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <meta charset="utf-8">
