--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       display: flex;
@@ -34,7 +35,7 @@
   </style>
 </head>
 <body>
-  <div class="copy">Send your URL to a friend to start a video call</div>
+  <u><div.a class="copy">Send your URL to a friend to start a video call</div.a></u>
   <video id="localVideo" autoplay muted></video>
   <video id="remoteVideo" autoplay></video>
   <script src="script.js"></script>
