--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VidChat</title>
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="style.css">
-  <p>Vidchat</p>
   <style>
     body {
       display: flex;
@@ -36,7 +33,7 @@
   </style>
 </head>
 <body>
-  <u><div.a class="copy">Send your URL to a friend to start a video call</div.a></u>
+  <div class="copy">Send your URL to a friend to start a video call</div>
   <video id="localVideo" autoplay muted></video>
   <video id="remoteVideo" autoplay></video>
   <script src="script.js"></script>
