--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="copy">Send your URL to a friend to start a video call</div>
   <video id="localVideo" autoplay muted></video>
   <button onclick="document.getElementById('remoteVideo').requestFullscreen()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-      <i class="material-icons custom">fullscreen</i></button>
+      <i class="material-icons">fullscreen</i></button>
   <video id="remoteVideo" autoplay></video>
   <script src="script.js"></script>
   <a href="https://agaudana.github.io/Chat/" target="_blank">Open Chat</a>
