--- a/chat/index.html
+++ b/chat/index.html
@@ -64,8 +64,8 @@
   <video id="localVideo" autoplay muted></video>
   <video id="remoteVideo" autoplay poster="Vidchat.png"></video>
   <script src="script.js"></script>
-  <a href="https://agaudana.github.io/Vidchat/chat/endChat/index.html" class="button"><span class="material-icons">call_end</span></a>
-  <a href="https://agaudana.github.io/Chat" class="button button2" onclick="window.open('https:/agaudana.github.io/Chat', 'newwindow', 'width= 300, height=400') 
+  <a href="endChat/index.html" class="button"><span class="material-icons">call_end</span></a>
+  <a href="https://agaudana.github.io/Chat" class="button button2" onclick="window.open('https://agaudana.github.io/Chat', 'newwindow', 'width= 300, height=400') 
   return false;"><span class="material-icons">chat</span></a>
 </body>
 </html>
