--- a/chat/endChat/index.html
+++ b/chat/endChat/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>THANK YOU FOR USING VIDCHAT!</h1>
     <p>Check out some of our other products like <a href="agaudana.github.io/Chat">Chat for VidChat</a> and Chatastic (Coming Soon!)</p>
-    <center><a href="/chat/index.html" class="button" role="button">Make a New Meeting</a></center>
+    <center><a href="/Vidchat/chat/index.html" class="button" role="button">Make a New Meeting</a></center>
     
 </body>
 </html>
